Query expander and NER analyser enhacements